--- a/Capitoli/Firebase.tex
+++ b/Capitoli/Firebase.tex
@@ -7,7 +7,7 @@
 
 Firebase \'e una piattaforma Mobile backend as a service (MBaaS) che consente
 di interfacciare applicazioni mobili e web app ad un cloud backend, fornendo allo sviluppatore servizi utili per la gestione degli utenti, storage, notifiche push e altri strumenti di analisi e sviluppo.\\
-Questo tipo di modello \'e relativamente recente poich\'e si basa sul cloud computing, fornendo uno servizio globale e uniforme per connettere client differenti con la sincronizzazione dei dati in tempo reale.\\
+Il modello su cui si basa la piattaforma \'e relativamente recente poich\'e appoggiandosi al cloud computing, fornisce uno servizio globale e uniforme per connettere client differenti offrendo una sincronizzazione dei dati in tempo reale.\\
 Lo sviluppo di Firebase inizi\'o dall'omonima azienda che nel 2011 svilupp\'o la piattaforma con l'idea di fornire un servizio in grado di sincronizzare dati in tempo reale, successivamente ricevett\'e grande interessa da parte di Google che nel 2014 acquist\'o\footnote{https://techcrunch.com/2014/10/21/google-acquires-firebase-to-help-developers-build-better-realtime-apps/} Firebase e altre startup simili, integrandole con i suoi servizi Google Cloud Platform.
 
 
@@ -23,10 +23,9 @@ Lo sviluppo di Firebase inizi\'o dall'omonima azienda che nel 2011 svilupp\'o la
 
 
 \section{Servizi}                 %crea la sezione
-%https://firebase.google.com/docs/
-Firebase offre diversi servizi, mettendo a disposizione anche SDK (software development kit ) e API ( Application programming interface) multipiattaforma ( Android, Ios, JavaScript, C++ e Unity) per interagire con essi.\\
-I servizi offerti da Firebase sono circa 20, realizzati per facilitare lo sviluppo e la gestione del backend, permettendo ad uno sviluppatore di concentrarsi solamente sulla parte client.\\
-Tra i vari servizi forniti quelli pi\'u utili nell' ambito dello sviluppo software sono:
+Firebase offre diversi servizi, mettendo a disposizione anche SDK (Software development kit) e API (Application programming interface) multipiattaforma (Android, Ios, JavaScript, C++, Unity) per interagire con essi.\\
+I servizi offerti da Firebase sono circa 20\footnote{https://firebase.google.com/products/}, realizzati per facilitare lo sviluppo e la gestione del backend, permettendo ad uno sviluppatore di concentrarsi maggiormente sulla parte client e meno sulla manutenzione e gestione del backend.\\
+Tra i vari servizi forniti, quelli pi\'u utili, nell'ambito dello sviluppo software sono:
 
 
 \begin{itemize}                         %crea un elenco puntato
@@ -34,19 +33,18 @@ Tra i vari servizi forniti quelli pi\'u utili nell' ambito dello sviluppo softwa
 
 \item \textbf{Firebase Auth}: Servizio per la gestione degli utenti con il supporto del social login per Facebook, Github, Twitter, Google
 
-\item \textbf{Realtime Database}: Database noSQL, con il supporto della sincronizzazione in real teim dei dati fra diversi client in diversi linguaggi di programmazione
+\item \textbf{Realtime Database}: Database noSQL con il supporto della sincronizzazione in tempo reale dei dati fra diversi client
 
-\item \textbf{Firebase Storage}: Servizio che offre trasferimento e hosting sicuro dei file
+\item \textbf{Firebase Storage}: Servizio che offre il trasferimento e l'hosting sicuro dei file
 
-\item \textbf{Firebase Hosting}: Web hosting che fornisce file utilizzando CDN (content delivery network) e HTTP Secure (HTTPS)
+\item \textbf{Firebase Hosting}: Web hosting che fornisce file utilizzando CDN (Content Delivery Network) e HTTP Secure (HTTPS)
 
+\item \textbf{Cloud Functions}: Servizio che permette di eseguire script JavaScript  ogni volta che vi \'e un cambianeto nel database
 
-\item \textbf{Cloud Functions}: Servizio che permette di scrivere script JavaScript eseguiti ogni volta che vi \'e un cambianeto nel database Firestore/Real Time Database
-
-\item \textbf{Firestore Database}: Database noSQl basato su documenti, con accesso ai dati offilne scalabile e con il supporto della sincronizzazione in real time
+\item \textbf{Firestore Database}: Database noSQL basato su documenti con il supporto della sincronizzazione in tempo reale
 \end{itemize}
 
-%https://firebase.google.com/products/
+
 
 
 %https://firebase.google.com/docs/database/rtdb-vs-firestore
@@ -59,16 +57,16 @@ Google offre due differenti database con supporto della sincronizzazone dei dati
 \end{itemize}
 
 
-\textbf{RealTime Database} \'e un cloud database NoSQL che memorizza i dati in un unico file JSON. Il database risultante risulta avere una struttura ad albero con un unica radice, la struttura \'e senza schema e pu\'o quindi cambiare nel tempo.\\
-Utilizzando l'SDK del RealTime Database i dati vengono mantenuti localmente, e anche quando sono offline, gli eventi in tempo reale continuano a incendiarsi, dando all' utente finale un' esperienza reattiva.\\ Quando il dispositivo riacquista la connessione, il Realtime Database sincronizza le modifiche dei dati locali con gli aggiornamenti remoti che si sono verificati mentre il client era offline, unendo automaticamente eventuali conflitti.
+\textbf{RealTime Database} \'e un cloud database NoSQL che memorizza i dati in un unico file JSON. Il database e formato da modello gerarchico ad albero con un unica radice ed ha una struttura \'e senza schema che pu'\o cambiare nel tempo.\\
+Utilizzando l'SDK, i le richieste effettuate al RealTime Database vengono memorizzati localmente nella cache, e aggiornati in tempo reale al susseguirsi di modifiche e eventi, dando all' utente finale un' esperienza reattiva.\\ Quando il dispositivo precedentemente offline riacquista la connessione, l'SDK del Realtime Database sincronizza le modifiche dei dati locali con gli aggiornamenti remoti che si sono verificati mentre il client era offline, risolvendo automaticamente eventuali conflitti.\\
 
 
-\textbf{Cloud Firestore} \'e un cloud database NoSQL basato sulla memorizzazione dei dati sottoforma di documenti e collezzioni di documenti, anche la sua struttura \'e senza schema e pu\'o quindi cambiare nel tempo.\\
+\textbf{Cloud Firestore} \'e un cloud database NoSQL basato sulla memorizzazione dei dati sottoforma di documenti e collezzioni, anche la sua struttura \'e senza schema e pu\'o quindi cambiare nel tempo.\\
 Il modello di memorizzazione dei dati \'e basato sui documenti che possono contenere dati come stringhe e numeri, oggetti complessi e annidati.\\
-Questi documenti sono archiviati in raccolte, che sono collezzioni per i documenti utilizzate per organizzare i dati e creare query.\\
+Questi documenti sono archiviati in raccolte, chiamate collezzioni che contengono i documenti, queste collezzioni vengono utilizzate per organizzare i dati e creare query.\\
 \'E inoltre possibile creare subcollezioni all'interno dei documenti e creare strutture gerarchiche di dati che scalano man mano che il database cresce.\\
-Gli unici limiti inposti da Firestore sono la dimensione di un singolo documento che \'e di 1 MiB (1,048,576 bytes) e un massimo di 100 collezzioni annidate.\\
-Il database Firestore mantiene i dati aggiornati attraverso una buona comunicazione client-server, i client attraverso l'utilizzo delle librerie SDK  e di listener offrono una sincronizzazione in tempo reale del dati.\\
+Gli unici limiti imposti da Firestore sono: la dimensione di un singolo documento che \'e di 1 MiB (1,048,576 bytes) e un massimo di 100 collezzioni annidate.\\
+Il database Firestore mantiene i dati aggiornati attraverso una buona comunicazione client-server, i client attraverso l'utilizzo delle librerie SDK e di listener appositi offrono una sincronizzazione dei dati in tempo reale.\\
 L'aggiunta di listener oltre a informare il client su modifiche effettuate nel database, permette di memorizzare le richieste effettuate in precedenza e mantenere una copia delle risposte del server nella cache, offrendo quindi un supporto offline dei dati.\\
 
 I tipi di dato messi a disposizione da Firestore sono:
@@ -90,15 +88,15 @@ Reference & Riferimento ad un'altro documento nel database  \\ \hline
 String & Stringa di testo codificata in UTF-8.\\
 \hline
 \end{tabular}
-\caption[Dati Firestore ]{Data type firestore}\label{tab:Firestore Dati}
+\caption[Dati Firestore]{Tipi di dato Firestore}\label{tab:Firestore Tipi di dato}
 \end{center}
 \end{table}
 
-L' interrogazione del database Firestore attraverso query risulta essere molto espressivo ed efficiente. \'E possibile creare query per filtrare solo alcuni dati all'interno di un documento o filtrare collezzioni, con la caratteristiche basilari delle interrogazioni: l'ordinamento, il filtraggio e limiti sui risultati di una query. Si possono filtrare anche sottocampi di un oggetto map, ma non \'e possibile filtrare o ordinare un elemento di tipo Reference che serve solo ad indicare il riferimento di un documento all'interno del database.\\
-Cloud Firestore offre un SDK con una buona integrazione per dispositivi mobili Android, iOS e web apps, ma permette l'utilizzo dei servizi anche offrndo SDK aggiuntive per altri linguaggi di programmazione come: NodeJS, Java, Python, e GO.\\
+L' interrogazione del database Firestore attraverso query risulta essere molto espressiva ed efficiente. \'E possibile creare query per filtrare solo alcuni dati all'interno di un documento o filtrare collezzioni, con la caratteristiche basilari delle interrogazioni: l'ordinamento, il filtraggio e limiti sui risultati di una query. Si possono filtrare anche sottocampi di un oggetto Map, ma non \'e possibile filtrare o ordinare un elemento di tipo Reference che serve solo ad indicare il riferimento di un documento all'interno del database.\\
+Cloud Firestore offre un SDK con una buona integrazione per dispositivi mobili Android, iOS e web apps, ma permette l'utilizzo dei servizi anche offrendo SDK aggiuntive per altri linguaggi di programmazione come: NodeJS, Java, Python, e GO.\\
 
 
-Ricapitolando, possiamo definire Firestore come una nuova versione di Firebase RealTime con una miglior struttura interna di memorizzazione dei dati e una espressivit\'a della query maggiore.
+Ricapitolando, possiamo definire Firestore come una nuova versione di Firebase RealTime con una miglior struttura interna, una buona memorizzazione dei dati e una espressivit\'a della query maggiore.
 
 \begin{table}[h]
 \begin{center}
@@ -120,11 +118,11 @@ Ricapitolando, possiamo definire Firestore come una nuova versione di Firebase R
 
 
 \subsection{Database Rules}                 %crea la sezione
-Firebase offre per i suoi due database la possibilit\'a di inserire delle restrizioni e regole di sicurezza per l'accesso, chiamate Database Rules.\\
-Le Database Rules determinano chi ha accesso in lettura e scrittura al database o a collezzioni di dati all'interno del database, queste regole sono presenti sui server Firebase e vengono applicate automaticamente ad ogni modifica. \\
+Firebase offre per i suoi due database la possibilit\'a di inserire delle restrizioni e regole di sicurezza per l'accesso e le chiamate al Database, chiamate Database Rules.\\
+Le Database Rules determinano chi ha accesso in lettura e scrittura al database o a collezzioni di dati all'interno del database, queste regole sono gestibili modificabili, utilizzando il pannello di controllo di Firebase, una volta scritte le regole queste vengono applicate automaticamente ad ogni modifica. \\
 Ogni richiesta di lettura e scrittura di dati nel database sar\'a completata solo se le regole lo consentono.\\
 Entrambi i database: Real time e Firestore supportano le Database Rules, le differenze fra i due servizi riguardano il metodo con cui vengono scritte le regole e il tipo di controlli che \'e possibile effetuare.\\
-Firebase permette di sccrivere le regole utilizzando un file in formato JSON in cui vengono definite le regole in base alla collezzione in cui si trovano i dati, alla validazione dei dati o in base all'utente loggato su Firebase Auth.\\
+Firebase permette di scrivere le regole utilizzando un file in formato JSON dove vengono definite le regole in base alla collezzione in cui si trovano i dati, alla validazione dei dati o in base all'utente loggato su Firebase Auth.\\
 Le regole applicate al database RealTime hanno una sintassi simile a JavaScript e mettono a disposizione del programmatore quattro tipi di controlli:
 
 \begin{table}[h]
@@ -133,15 +131,15 @@ Le regole applicate al database RealTime hanno una sintassi simile a JavaScript 
     \hline
     {\textbf{Tipo}} & {\textbf{Descrizione}} \\ \hline
     .read & Descrive se e quando i dati possono essere letti dagli utenti.\\ \hline
-   .write & Descrive se e quando i dati possono essere scritti dagli utenti\\ \hline
+    .write & Descrive se e quando i dati possono essere scritti dagli utenti\\ \hline
      .validate & Definisce l'aspetto di un valore formattato correttamente, se ha attributi figli e il tipo di dato\\ \hline
-    .indexOn & Specifica una collezzione da indicizzare per supportare l' ordine e l' interrogazione\\ \hline
+    .indexOn & Specifica una collezzione da indicizzare per supportare l'ordine e l' interrogazione\\ \hline
 \end{tabular}
 \caption[Firbase Rules ]{Firebase Rules}\label{tab:Firebase Rules}
 \end{center}
 \end{table}
 
-La stesura delle regole per il database RealTime viene memorizzata in formato JSON sui server Firebase, un esempio di alcune regole applicate su un database \'e il seguente:
+Le regole per il database RealTime vengono memorizzate in formato JSON sui server Firebase, un esempio di alcune regole applicate \'e il seguente:
 
 
 \begin{lstlisting}[language=javascript,caption={Firebase Rules esempio }]
@@ -162,9 +160,9 @@ La stesura delle regole per il database RealTime viene memorizzata in formato JS
 
 
 
-Le regole di sicurezza del database Firestore sono simili a quelle del RealTime Database ma prevedono un controllo degli accessi e della convalida dei dati in un formato pi\'u semplice ma espressivo.\\
-Tutte le regole di sicurezza Cloud Firestore sono costituite da dichiarazioni di corrispondenza chiamate "match" che identificano i documenti nel database e consentono la creazione di espressioni che controllano l' accesso a tali documenti.\\
-Oltre alle regole di scrittura, letttura, condalidazione \'e possibile creare funzioni ausiliarie per semplificare e rendere pi\'u intuitivo la scritture delle regole.\\
+Le regole di sicurezza del database Firestore sono simili a quelle del RealTime Database ma prevedono un controllo degli accessi e della convalida dei dati in un formato pi\'u semplice ed espressivo.\\
+Tutte le regole di sicurezza Firestore sono costituite da dichiarazioni di corrispondenza chiamate ``match'' che identificano i documenti nel database e consentono la creazione di espressioni che controllano l' accesso a tali documenti.\\
+Oltre alle regole di scrittura, letttura, condalidazione \'e possibile creare funzioni ausiliarie per semplificare e rendere pi\'u intuitiva la scritture delle regole.\\
 Un esempio di scrittura di alcune regole su un database Firestore \'e il seguente:
 
 \begin{lstlisting}[language=javascript,caption={Firestore Rules}]
@@ -201,7 +199,7 @@ Il ciclo di vita di una funzione \'e il seguente:
 
 
 \newpage              % ends first column but not page
-Cloud Functions mette a disposizione 4 tipi di controllo sui dati del database:
+Cloud Functions mette a disposizione 4 tipi di controllo sul database:
 
 \begin{table}[h!]
 \begin{tabular}{|p{2cm}|p{12cm}|}
@@ -213,11 +211,11 @@ Cloud Functions mette a disposizione 4 tipi di controllo sui dati del database:
     onWrite & Attivato quando si attiva onCreate, onUpdate o onDelete.\\ \hline
 
 \end{tabular}
-\caption[Firestore Rules ]{Firestore Rules}\label{tab:Firestore Rules}
+\caption[Firestore Rules]{Firestore Rules}\label{tab:Firestore Rules}
 \end{table}
 
 
-La scrittura di una funzione viene effettuata con la scrittura di funzioni JavaScript o TypeScript, indicando il documento o collezzione sui cui si vuole fare riferimento seguito dal tipo di evento:
+La stesura di una funzione viene effettuata definendo funzioni JavaScript o TypeScript e indicando il documento o collezzione sui cui si vuole fare riferimento, seguito dal tipo di evento:
 
 
 
@@ -237,61 +235,99 @@ exports.modifyUser = functions.firestore.document('users/{userID}').onWrite(even
 
 \newpage              % ends first column but not page
 \subsection{Esempi di utilizzo}
-Le cloud functions possono essere utilizzati anche interagendo con gli altri servizi Firebase, un esempio di integrazione tipico potrebbe essere quello di creare un'anteprima di un immagine e salvarla su Firebase storage:
+Le cloud functions possono essere utilizzati anche interagendo con gli altri servizi Firebase, un esempio di integrazione tipico potrebbe essere quello di creare l'anteprima di un immagine e salvarla su Firebase storage:
 
 \begin{figure}[!hb]
 
-  \includegraphics[width=0.8\textwidth]{immagini/functions_ex1.png}
-  \caption{Firebase Storage e Cloud Functions esempio 1}
-  \label{fig:Firebase Storage e Cloud Functions esempio 1}
+  \includegraphics[width=0.7\textwidth]{immagini/functions_ex1.png}
+  \caption{Firebase Storage e Cloud Functions esempio 1}\label{fig:Firebase Storage e Cloud Functions esempio 1}
 \end{figure}
 
 In questo esempio un funzione si attiva quando un immagine viene caricata in sullo storage firebase, la funzione scarica l'immagine e ne crea una versione miniaturizzata, in seguito scrive il riferimento della miniatura sul database, in modo che un'applicazione client possa trovarla e utilizzarla.\\
+% Un'altro esempio \'e l'utilizzo delle cloud functions per effettuare controlli su un tipo di linguaggio inappropriato all'interno di una chat,forum o commento:\\
+%
+% \begin{figure}[h!]
+%   \centering
+%   \includegraphics[width=0.55\textwidth]{immagini/functions_ex2.png}
+%   \caption{Firebase Storage e Cloud Functions esempio 2}
+%   \label{fig:Firebase Storage e Cloud Functions esempio 2}
+% \end{figure}
+%
+% Quando un messaggio viene scritto all'interno della collezzione ``msgs'' la funzione che ascolta gli eventi di scrittura ne recupera i dati, elabora il testo per rilevare la presenza di un linguaggio non appropriato e infine riscrivere il messaggio ricevuto correggendolo o eliminando parti di linguaggio volare, applicando cosi una moderazione del testo lato server.
 
-Un'altro esempio \'e l'utilizzo delle cloud functions per effettuare controlli su un tipo di linguaggio inappropriato all'interno di una chat,forum o commento:\\
-
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=0.3\textwidth]{immagini/functions_ex2.png}
-  \caption{Firebase Storage e Cloud Functions esempio 2}
-  \label{fig:Firebase Storage e Cloud Functions esempio 2}
-\end{figure}
-
-Quando un messaggio viene scritto all'interno della collection "msgs" la funzione che ascolta gli eventi di scrittura ne recupera i dati, elabora il testo per rilevare la presenza di un linguaggio non appropriato e riscrivere il messaggio ricevuto correggendolo o eliminando parti di linguaggio volare, applicando cosi una moderazione del testo lato server.
-
+\newpage
 %https://developer.xamarin.com/guides/android/data-and-cloud-services/google-messaging/firebase-cloud-messaging/
 \section{Cloud Messaging}                 %crea la sezione
-Firebase Cloud Messaging (FCM) \'e una soluzione di messaggistica multipiattaforma che consente di inviare messaggi tra dispositivi con la possibilt\'a di notificare a una o pi\'u applicazioni client che sono disponibili nuovi dati di sincronizzazione.\\
+Firebase Cloud Messaging (FCM) \'e una soluzione di messaggistica multipiattaforma che consente di inviare messaggi tra dispositivi con la possibilt\'a di notificare a una o pi\'u applicazioni client che sono disponibili nuovi dati.\\
+\'E possibile inviare messaggi tramite l'Admin SDK o le API HTTP e XMPP, il carico utile massimo per un messaggio \'e di 4KB, tranne quando si inviano messaggi dalla console Firebase, che impone un limite di 1024 caratteri.\\
+I messaggi possono essere di due tipologie: kessaggi di notifica e messaggi di dati.
+La differenza fra i due tipi di messaggi \'e la loro composizione: i messaggi di notifica contengono un insieme predefinito di chiavi visualizzabili dall' utente, mentre i messaggi di dati contengono solo un insieme di chiave-valore definito dall'utente.\\
+Entrambi i messaggi richiedono di definire il campo obbligatorio ``token'' che \'e il riferimento di un dispositivo o di un gruppo di dispositivi, questo token \'e generato tramite l'SDK di Firebase e deve essere memorizzato su un server per poter essere riutilizzato, in caso contrario l'SDK permette di aggiornare il token del dispositivo.
 
-I messaggi si differenziano in due tipi:
-\begin{itemize}
-  \item Messaggi di notifica
-  \item Messaggi di dati
+\begin{figure}[!hb]
+  \centering
+  \includegraphics[width=1\textwidth]{immagini/fcm_token.png}
+  \caption{Token FCM.}
+  \label{fig:Token FCM}
+\end{figure}
 
-\end{itemize}
-
-\'E possibile inviare messaggi tramite l'Admin SDK o le API HTTP e XMPP, il carico utile massimo per entrambi i tipi di messaggio \'e 4KB, tranne quando si inviano messaggi dalla console Firebase, che impone un limite di 1024 caratteri.\\
-La differenza fra i due tipi di messaggi \'e la loro composizione: i messaggi di notifica contengono un set predefinito di chiavi visualizzabili dall' utente, mentre i messaggi di dati, contengono solo le coppie di valori definite dall'utente.\\
-Entrambi i messaggi richiedono di definire il campo obbligatorio "token" che \'e un riferimento ad dispositivo o ad un gruppo di dispositivi, questo token \'e generato tramite l'SDK di Firebase e deve essere memorizzato su un server per poter essere riutilizzato, in caso contrario l'SDK permette di aggiornare il token del dispositivo.\\
-
-\subsection{Invio messaggi}
-Firebase Cloud Messaging \'e usufruibile solo se si utilizza l'apposito SDK e si ottiene un token, necessario per inviare un messaggio a un dispositivo specifico.\\
+\newpage
+La ricezione dei messaggi di Cloud Messaging \'e possibile solo se si utilizza l'apposito SDK e si ottiene un token, necessario per inviare un messaggio ad un dispositivo specifico.\\
 All'avvio iniziale dell' applicazione, l'SDK FCM genera un token di registrazione per l'istanza dell' applicazione client.\\
-I token e la ricezione dei messaggi possono essere controllati creando una classe che ha come estensione la classe "FirebaseInstanceIdService" per la gestione dei token e la classe "FirebaseMessagingService" per la gestione dei messaggi ricevuti.\\
+I token e la ricezione dei messaggi possono essere controllati utilizzando le classi offerte dall'SDK.
+La classe "FirebaseInstanceIdService" viene utilizzata per la gestione dei token, mentre la classe "FirebaseMessagingService" viene utilizzata per la gestione dei messaggi ricevuti.\\
+Il token di registrazione pu\'o cambiare quando l'applicazione elimina il token, ripristina/riinstalla o dinistalla l'app, o quando vengono eliminare le cache dal dispositivo.
 
-Il token di registrazione pu\'o cambiare quando:
 
+\subsection{Messaggi}
+I messaggi di dati inviabili tramite l'SDK o richieste HTTPS possono essere:
 \begin{itemize}
-    \item L' applicazione elimina l' ID istanza
-    \item L' applicazione viene ripristinata su un nuovo dispositivo
-    \item L' utente disinstalla/riinstalla l' app
-    \item L' utente cancella i dati delle app.
+    \item Downstream Messaging
+    \item Upstream Messaging
 \end{itemize}
 
-FCM tramite l'SDK e richieste HTTPS consente anche la creazione di gruppi di utenti, permettendo con un solo token di inviare un singolo messaggio a pi\'u istanze di un' applicazione in esecuzione su dispositivi appartenenti a un gruppo. Tutti i dispositivi di un gruppo condividono una comune chiave di notifica, che \'e il token utilizzato da FCM per inviare i messaggi a tutti i dispositivi del gruppo. \\
+I messaggi Downstream, permettono di inviare una notifica push dal Server verso il Client
 
-Sulla base del modello di pubblicazione/iscrizione invece, FCM consente di inviare un messaggio a pi\'u dispositivi che hanno si sono registrati ad un particolare argomento.\\
-Le applicazioni client possono iscriversi a qualsiasi argomento esistente o creare un nuovo argomento. Quando un' applicazione client sottoscrive un nuovo nome di argomento (uno che non esiste gi\'a per il vostro progetto Firebase), un nuovo argomento di tale nome viene creato in FCM e ogni cliente pu\'o successivamente sottoscriverlo.\\
+\begin{figure}[!hb]
+  \centering
+  \includegraphics[width=0.55\textwidth]{immagini/fcm_down.png}
+  \caption{FCM Downstream.}
+  \label{fig:FCM Downstream}
+\end{figure}
+
+
+
+
+\begin{itemize}
+    \item Il server (per esempio Cloud Functions) invia il messaggio a FCM
+    \item Se il client non è disponibile, il server FCM memorizza il messaggio in una coda per la successiva trasmissione. I messaggi vengono conservati nella memoria FCM per un massimo di 4 settimane
+    \item Quando il dispositivo client è disponibile, FCM inoltra il messaggio all' applicazione
+    \item L' applicazione client riceve il messaggio da FCM, lo elabora e lo visualizza all' utente
+\end{itemize}
+
+
+In alternative oltre all'invio di un messaggio ad un singolo dispositivo FCM consente la creazione di gruppi di utenti, permettendo con un singolo token di inviare un messaggio a tutti i dispositivi appartenenti ad un gruppo.\\
+
+Sulla base del modello di pubblicazione/iscrizione invece, FCM consente anche di inviare un messaggio a pi\'u dispositivi che hanno si sono registrati ad un particolare argomento.
+
+\begin{figure}[!hb]
+  \centering
+  \includegraphics[width=0.8\textwidth]{immagini/fcm_topic.png}
+  \caption{FCM Topic.}\label{fig:FCM Topic}
+\end{figure}
+
+
+    \begin{itemize}
+        \item L' applicazione client si iscrive a un argomento inviando un messaggio di sottoscrizione all server FCM.
+        \item L' app server invia messaggi tematici a FCM per la distribuzione.
+        \item Quando il dispositivo client è disponibile, FCM inoltra il messaggio all' applicazione.
+        \item     FCM inoltra messaggi tematici ai clienti che si sono abbonati a tale argomento.
+
+    \end{itemize}
+
+
+
+
 Per iscriversi a un argomento, l' applicazione client chiama la funzione
 
 \begin{lstlisting}[language=java,caption={FCM topic}]
@@ -321,7 +357,7 @@ Sound  &	Suono da riprodurre quando il dispositivo riceve la notifica. \\   \hli
 Sottotitolo  &	Sottotitolo della notifica. \\   \hline
 Icon & Icona della notifica \\   \hline
 Timetolive & Specifica per quanto tempo (in secondi) il messaggio deve essere conservato se il dispositivo \'e offline.  \\   \hline
-Clickaction &	L' azione associata ad un click  della notifica. \\   \hline
+Clickaction &	L' azione associata al click della notifica. \\   \hline
 
 \end{tabular}
 \caption[Cloud Messaging paramentri ]{FCM parametri}\label{tab:FCFM parametri}
@@ -330,35 +366,30 @@ Clickaction &	L' azione associata ad un click  della notifica. \\   \hline
 
 
 \subsection{Priorit\'a}
-Esistono due opzioni per assegnare la priorit\'a di consegna ai messaggi: normale e ad alta priorit\'a. Il recapito di messaggi normali e ad alta priorit\'a funziona in questo modo:
+Esistono due opzioni per assegnare la priorit\'a di consegna ai messaggi: normale ed alta priorit\'a. Il recapito di messaggi normali e di alta priorit\'a funziona in questo modo:
 \begin{itemize}
-\item Priorit\'a normale: i messaggi vengono inviati immediatamente quando l' app \'e in primo piano, quando invece il dispositivo \'e in modalit\'a Doze o l' applicazione \'e in standby app la consegna potrebbe essere ritardata per risparmiare la batteria, i messaggi in questo caso richiedono di pianificare un job FJD (Firebase Job Dispache) o un JobIntentService per gestire la notifica quando la rete sar\'a nuovamaente disponibile.
-\item Alta priorit\'a: Il server Cloud Messaging tenta di inviare immediatamente il messaggio ad alta priorit\'a, consentendo al servizio di attivare un dispositivo sleeping, tramite l'SDK, e di eseguire alcune elaborazioni limitate (compreso un accesso alla rete molto limitato).
+\item  \textbf{Priorit\'a normale}: i messaggi vengono inviati immediatamente quando l' app \'e in primo piano, quando invece il dispositivo \'e in modalit\'a Doze o l' applicazione \'e in standby la consegna potrebbe essere ritardata per risparmiare la batteria, i messaggi in questo caso richiedono di pianificare un job FJD (Firebase Job Dispache) o un JobIntentService per gestire la notifica quando la rete sar\'a nuovamaente disponibile.
+\item \textbf{Alta priorit\'a}: Il server Cloud Messaging tenta di inviare immediatamente il messaggio ad alta priorit\'a, consentendo al servizio, attraverso l'SDK di cambiare lo stato del dispositivo e di eseguire alcune elaborazioni limitate (compreso un accesso alla rete molto limitato).
 \end{itemize}
-
-
-
-
 
 
 
 
 
 \section{FirebaseUI}                 %crea la sezione
-FirebaseUI \'e un insieme di librerie open-source per Firebase che consentono di semplificare lo sviluppo di un applicaione che utilizza Firebase.
-I miglioramenti vengono apportati attraverso una versione semplificata dell' autenticazione di Firebase fornendo metodi di facile utilizzo che si integrano con i pi\'u comuni fornitori di identit\'a come Facebook, Twitter e Google, migliorare la gestone delle view con la sincronizzazione in tempo reale del database e funzionalit\'a aggiuntive per il servizio Firebase Storage
-
+FirebaseUI \'e un insieme di librerie open-source per Firebase che consentono di semplificare lo sviluppo di un applicazione che utilizza Firebase.\\
+I miglioramenti vengono apportati attraverso una versione semplificata dell' autenticazione, fornendo metodi che si integrano con i pi\'u comuni social, migliorare la gestone delle view con la sincronizzazione in tempo reale del database e funzionalit\'a aggiuntive per il servizio Firebase Storage.\\
 FirebaseUI dispone di moduli separati per utilizzare Firebase Realtime Database, Cloud Firestore, Firebase Auth e Cloud Storage.
 \begin{itemize}
-  \item FirebaseUI Autorizzare
-  \item  FirebaseUIUI Firebase Firestore
+  \item  FirebaseUI Auth
+  \item  FirebaseUI Firestore
   \item  FirebaseUI Database
-  \item  FirebaseUI storage
+  \item  FirebaseUI Storage
 \end{itemize}
 
 
-FirebaseUI-Auth mira a massimizzare l'integrqzione integra con Smart Lock for Password per memorizzare e recuperare le credenziali, consentendo l' accesso automatico e single-tap sign-in, gestendo anche casi d'uso pi\'u complessi come il recupero dell'account e il collegamento di account multipli che sono sensibili alla sicurezza e difficili da implementare correttamente utilizzando le API di base fornite da Firebase Auth.
-
-FirebaseUI-Firestore semplifica il collegamento dei dati da Cloud Firestore all' interfaccia utente dell' applicazione, fornendo un adapter personalizzato per Firestore (FirestoreRecyclerAdapter) che consente la manipolazione automatica della sincronizzazione tra view e il database Firestore.
+FirebaseUI-Auth cerca di gestire tutte le possibili casistiche che si possono riscontrare durante il login e la registrazione di un nuovo utente.
+La libreria FirebaseUIAuth offre una integrazione con i social login pi\'u diffusi (Google, Facebook, Twitter) e una buona integrazione con Smart Lock for Password per memorizzare e recuperare le credenziali, consentendo l' accesso automatico e single-tap sign-in, gestendo anche casi d'uso pi\'u complessi come il recupero dell'account e il collegamento di account multipli che sono sensibili alla sicurezza e difficili da implementare correttamente utilizzando le API di base fornite da Firebase Auth.\\
+FirebaseUI-Firestore semplifica il collegamento dei dati da Cloud Firestore all' interfaccia utente dell' applicazione, fornendo un adapter personalizzato  (FirestoreRecyclerAdapter) che consente la manipolazione e sincronizzazione automatica tra le view e il database Firestore.
 
 \clearpage{\pagestyle{empty}\cleardoublepage}
